--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -6,4 +6,13 @@
     android:background="@color/colorDefaultWhite"
     android:fitsSystemWindows="true"
     tools:context="com.khotiun.android.fandroidvktest.ui.fragment.NewsFeedFragment">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+
+    </android.support.v7.widget.RecyclerView>
+
 </RelativeLayout>
