--- a/app/src/main/res/layout/item_news_body.xml
+++ b/app/src/main/res/layout/item_news_body.xml
@@ -4,7 +4,7 @@
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/body"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_text"
